[package]
authors = ["The rust-fuzz Project Developers"]
edition = "2018"
license = "MIT/Apache-2.0"
readme = "./README.md"
repository = "https://github.com/rust-fuzz/libfuzzer"
name = "libfuzzer"
version = "0.2.0"

[workspace]
members = [
    ".",
    "./libfuzzer-sys"
]

[dependencies]
# arbitrary = "0.3"
arbitrary = { git = "https://github.com/rust-fuzz/arbitrary.git", rev = "8fa099d" }
libfuzzer-sys = { version = "=0.2.0", path = "./libfuzzer-sys" }

[features]
arbitrary-derive = ["arbitrary/derive"]
