[package]
authors = ["The rust-fuzz Project Developers"]
edition = "2018"
license = "MIT/Apache-2.0/NCSA"
links = "fuzzer"
name = "libfuzzer-sys"
readme = "./README.md"
repository = "https://github.com/rust-fuzz/libfuzzer"
version = "0.2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[build-dependencies]
cc = "1.0"
